--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!d<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
@@ -453,7 +453,7 @@
 
             <div class="menuList" id="menuList">
               <button class="itemBtn" data-open="contact">
-                <span class="name">Contract</span></span>
+                <span class="left"><span class="dot"></span><span class="name">Contact</span></span>
                 <span class="pill">Live</span>
               </button>
               <button class="itemBtn" data-open="contract">
