--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
             </div>
 
             <div class="menuList" id="menuList">
-              <button class="itemBtn" data-open="contact">
+             <a href="modules/contact.html">Contact</a>
                 <span class="left"><span class="dot"></span><span class="name">Contact</span></span>
                 <span class="pill">Live</span>
               </button>
