--- a/index.html
+++ b/index.html
@@ -452,8 +452,8 @@
             </div>
 
             <div class="menuList" id="menuList">
-             <a href="modules/contact.html">Contact</a>
-                <span class="left"><span class="dot"></span><span class="name">Contact</span></span>
+               <button class="itemBtn" data-open="contact">
+                <span class="left"><span class="dot"></span><a href="modules/contact.html">Contact</a>
                 <span class="pill">Live</span>
               </button>
               <button class="itemBtn" data-open="contract">
