--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,8 @@
   <title>Contact — TitanCore Executive Control Center</title>
 
   <!-- If your global CSS exists, it will load -->
-  <link rel="stylesheet" href="../assets/style.css" />
+<link rel="stylesheet" href="./styles.css">
+<link rel="stylesheet" href="./contact.css">
 
   <!-- Fallback styling (so it never turns white even if CSS is missing) -->
   <style>
