--- a/email.html
+++ b/email.html
@@ -30,6 +30,17 @@
     .btn.ghost{opacity:.85}
   </style>
 </head>
+  <thead>
+  <tr>
+    <th>Time</th>
+    <th>Dir</th>
+    <th>Mailbox</th>
+    <th>From</th>
+    <th>To</th>
+    <th>Subject</th>
+    <th>Status</th>
+  </tr>
+</thead>
 
 <body>
 <div class="wrap">
